--- a/style/syle.css
+++ b/style/syle.css
@@ -1,3 +1,25 @@
 .center {
-  
+  text-align: center;
+}
+
+#container {
+  width: 75%;
+  margin: auto;
+}
+
+#entryinput {
+  width: 100%;
+}
+
+#entrybutton {
+  text-align: center;
+  width: 100px;
+  margin: auto;
+  padding: 5em 0;
+  font-size: 30px;
+  font-weight: bold;
+  border-radius: 25px;
+  border-color: #000000;
+  color: #ffffff;
+  background-color: #ff0000;
 }
