--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@
 #entrybutton {
   text-align: center;
   width: 200px;
+  max-height: 50px;
   margin: auto;
   padding: 5em 0;
   font-size: 30px;
